ruapc-macro/tests/ui/fail/not_async.stderr
error: custom attribute panicked
 --> tests/ui/fail/not_async.rs:3:1
  |
3 | #[ruapc::service]
  | ^^^^^^^^^^^^^^^^^
  |
  = help: message: the function should be in the form `async fn func(&self, ctx: &Context, req: &Req) -> Result<Rsp>`.
